--- a/package.json
+++ b/package.json
@@ -9,17 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.8.0",
-    "@types/react": "18.2.24",
-    "@types/react-dom": "18.2.8",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@imagemagick/magick-wasm": "^0.0.24",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
     "autoprefixer": "10.4.16",
-    "eslint": "8.50.0",
-    "eslint-config-next": "13.5.3",
-    "next": "13.5.3",
+    "body-scroll-lock": "^4.0.0-beta.0",
+    "clsx": "^2.1.0",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.1",
+    "framer-motion": "^10.18.0",
+    "lottie-react": "^2.4.0",
+    "next": "^14.0.1",
+    "next-intl": "^2.22.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "react-router-dom": "^6.18.0",
+    "react-tsparticles": "^2.12.2",
+    "react-type-animation": "^3.2.0",
+    "react-use": "^17.4.0",
+    "resend": "^2.0.0",
+    "sharp": "^0.32.6",
+    "swiper": "^10.3.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.2"
   }
 }
